<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:padding="10sp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:contentDescription="@string/img_ok"
                    android:layout_gravity="center"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    app:srcCompat="@drawable/ic_ok"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5sp"
                    android:textSize="18sp"
                    android:text="@string/cardForm"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0sp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:padding="5sp"
                    android:text="@string/cardSentence" />

                <ImageView
                    android:contentDescription="@string/img_card"
                    android:layout_width="0sp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_height="80sp"
                    app:srcCompat="@drawable/ic_card" />

            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="5sp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilCardNumber"
                    android:layout_width="match_parent"
                    android:hint="@string/inputCardNumber"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etCardNumber"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="16"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilCardName"
                    android:layout_width="match_parent"
                    android:hint="@string/inputCardName"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etCardName"
                        android:importantForAutofill="no"
                        android:maxLength="150"
                        android:inputType="textPersonName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDueMonth"
                    android:layout_width="0sp"
                    android:layout_weight="2"
                    android:layout_marginRight="5sp"
                    android:hint="@string/inputDueMonth"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDueMonth"
                        android:importantForAutofill="no"
                        android:maxLength="2"
                        android:inputType="date"
                        android:nextFocusDown="@id/etDueYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/slash"
                    android:textSize="30sp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDueYear"
                    android:layout_width="0sp"
                    android:layout_weight="2"
                    android:hint="@string/inputDueYear"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:layout_marginRight="10sp"
                    android:layout_marginLeft="5sp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etDueYear"
                        android:importantForAutofill="no"
                        android:nextFocusDown="@id/etCardCVV"
                        android:maxLength="2"
                        android:inputType="date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilCardCVV"
                    android:hint="@string/cardCvv"
                    android:layout_width="0sp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    app:counterMaxLength="3"
                    app:errorEnabled="true"
                    android:layout_marginLeft="10sp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etCardCVV"
                        android:importantForAutofill="no"
                        android:inputType="number"
                        android:maxLength="3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilCP"
                    android:layout_width="0sp"
                    android:layout_weight="3"
                    android:hint="@string/cardCP"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etCP"
                        android:importantForAutofill="no"
                        android:layout_marginRight="10sp"
                        android:maxLength="8"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/img_visa"
                    android:contentDescription="@string/img_card"
                    android:layout_width="0sp"
                    android:layout_weight="1"
                    android:layout_height="30sp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_visa_gray" />

                <ImageView
                    android:id="@+id/img_masterCard"
                    android:contentDescription="@string/img_card"
                    android:layout_width="0sp"
                    android:layout_weight="1"
                    android:layout_height="30sp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_mastercard_gray" />

                <ImageView
                    android:id="@+id/img_amex"
                    android:contentDescription="@string/img_card"
                    android:layout_width="0sp"
                    android:layout_weight="1"
                    android:layout_height="30sp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_amex_gray" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/chk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="0sp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:padding="5sp"
                    android:text="@string/cardCheck" />

            </LinearLayout>

            <Button
                android:layout_marginTop="5sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_card"
                android:padding="5sp"
                app:icon="@drawable/ic_money"
                app:iconGravity="textStart"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>